# NameForge

./: .gitignore  LICENSE  README.md  biagram.ipynb  bigram.ipynb  broadcasting.ipynb  dataset.ipynb  pyproject.toml
